group("examples") {
  deps = [
    ":bags",
    ":hello",
    ":hello_imports",
  ]
}

executable("bags") {
  sources = [
    "bags.cc",
  ]

  deps = [
    "//icl",
  ]
}

executable("hello") {
  sources = [
    "hello.cc",
  ]

  deps = [
    "//icl",
  ]
}

executable("hello_imports") {
  sources = [
    "hello_imports.cc",
  ]

  deps = [
    "//icl",
  ]
}
