import("//testing/test.gni")

group("tests") {
  testonly = true

  deps = [
    # icl:
    ":operators_test",
#FIXME needs a lot of work
    ":parse_tree_test",
    ":tokenizer_test",
    ":scope_test",
    ":value_test",

    # string_number_conversions:
    ":string_number_conversions_test",

    # string_piece:
    ":string_piece_test",
  ]
}

# icl --------------------------------------------------------------------------

source_set("icl") {
  sources = [
    "err.cc",
    "err.h",
    "function_foreach.cc",
    "functions.cc",
    "functions.h",
    "input_file.cc",
    "input_file.h",
    "item.cc",
    "item.h",
    "location.cc",
    "location.h",
    "operators.cc",
    "operators.h",
    "parse_node_value_adapter.cc",
    "parse_node_value_adapter.h",
    "parse_tree.cc",
    "parse_tree.h",
    "parser.cc",
    "parser.h",
    "scope.cc",
    "scope.h",
    "settings.cc",
    "settings.h",
    "standard_out.cc",
    "standard_out.h",
    "string_utils.cc",  #FIXME needs a ton of work
    "string_utils.h",
    "token.cc",
    "token.h",
    "tokenizer.cc",
    "tokenizer.h",
    "value.cc",
    "value.h",
  ]

  deps = [
    ":string_number_conversions",
  ]

  public_deps = [
    ":string_piece",
  ]
}

source_set("icl_test_support") {
  testonly = true
  visibility = [ ":*" ]

  sources = [
    "test_with_scope.cc",
    "test_with_scope.h",
  ]

  public_deps = [
    ":icl",
  ]
}

test("operators_test") {
  sources = [
    "operators_unittest.cc",
  ]

  deps = [
    ":icl",
    ":icl_test_support",
  ]
}

#FIXME: string_utils_unittest.cc functions_unittest.cc
# function_foreach_unittest.cc parser_unittest.cc

test("parse_tree_test") {
  sources = [
    "parse_tree_unittest.cc",
  ]

  deps = [
    ":icl",
    ":icl_test_support",
  ]
}

test("scope_test") {
  sources = [
    "scope_unittest.cc",
  ]

  deps = [
    ":icl",
    ":icl_test_support",
  ]
}

test("tokenizer_test") {
  sources = [
    "tokenizer_unittest.cc",
  ]

  deps = [
    ":icl",
  ]
}

test("value_test") {
  sources = [
    "value_unittest.cc",
  ]

  deps = [
    ":icl",
  ]
}

# string_number_conversions ----------------------------------------------------

source_set("string_number_conversions") {
  sources = [
    "string_number_conversions.cc",
    "string_number_conversions.h",
  ]
}

test("string_number_conversions_test") {
  sources = [
    "string_number_conversions_unittest.cc",
  ]

  deps = [
    ":string_number_conversions",
  ]
}

# string_piece -----------------------------------------------------------------

source_set("string_piece") {
  sources = [
    "string_piece.cc",
    "string_piece.h",
  ]
}

test("string_piece_test") {
  sources = [
    "string_piece_unittest.cc",
  ]

  deps = [
    ":string_piece",
  ]
}
