import("//testing/test.gni")

group("tests") {
  testonly = true

  deps = [
    # icl:
    ":filesystem_utils_test",
    ":function_test",
    ":operators_test",
    ":parse_tree_test",
    ":parser_test",
    ":template_test",
    ":tokenizer_test",
    ":scope_test",
    ":source_dir_test",
    ":string_utils_test",
    ":value_test",

    # string_number_conversions:
    ":string_number_conversions_test",

    # string_piece:
    ":string_piece_test",

    # ref_counted:
    ":ref_counted_test",
  ]
}

# icl --------------------------------------------------------------------------

source_set("icl") {
  sources = [
    "delegate.h",
    "err.cc",
    "err.h",
    "filesystem_utils.cc",  #FIXME hilarious amount commented out
    "filesystem_utils.h",
    "function.cc",
    "function.h",
    "function_impls_foreach.cc",
    "function_impls_template.cc",
    "function_impls.cc",
    "function_impls.h",
    "input_file.cc",
    "input_file.h",
    "item.cc",
    "item.h",
    "load_file.cc",
    "load_file.h",
    "location.cc",
    "location.h",
    "operators.cc",
    "operators.h",
    "parse_node_value_adapter.cc",
    "parse_node_value_adapter.h",
    "parse_tree.cc",
    "parse_tree.h",
    "parser.cc",
    "parser.h",
    "runner.cc",
    "runner.h",
    "scope.cc",
    "scope.h",
    "source_dir.cc",
    "source_dir.h",
    "source_file.cc",
    "source_file.h",
    "string_utils.cc",
    "string_utils.h",
    "template.cc",
    "template.h",
    "token.cc",
    "token.h",
    "tokenizer.cc",
    "tokenizer.h",
    "value.cc",
    "value.h",
    "variables.cc",
    "variables.h",
  ]

  deps = [
    ":string_number_conversions",
  ]

  public_deps = [
    ":ref_counted",
    ":string_piece",
  ]
}

source_set("icl_test_support") {
  testonly = true
  visibility = [ ":*" ]

  sources = [
    "test_with_scope.cc",
    "test_with_scope.h",
  ]

  public_deps = [
    ":icl",
  ]
}

test("filesystem_utils_test") {
  sources = [
    "filesystem_utils_unittest.cc",
  ]

  deps = [
    ":icl",
  ]
}

test("function_test") {
  sources = [
    "function_impls_foreach_unittest.cc",
    "function_impls_template_unittest.cc",
    "function_unittest.cc",
  ]

  deps = [
    ":icl",
    ":icl_test_support",
  ]
}

test("operators_test") {
  sources = [
    "operators_unittest.cc",
  ]

  deps = [
    ":icl",
    ":icl_test_support",
  ]
}

test("parse_tree_test") {
  sources = [
    "parse_tree_unittest.cc",
  ]

  deps = [
    ":icl",
    ":icl_test_support",
  ]
}

test("parser_test") {
  sources = [
    "parser_unittest.cc",
  ]

  deps = [
    ":icl",
    ":icl_test_support",
  ]
}

test("scope_test") {
  sources = [
    "scope_unittest.cc",
  ]

  deps = [
    ":icl",
    ":icl_test_support",
  ]
}

test("source_dir_test") {
  sources = [
    "source_dir_unittest.cc",  #FIXME this is all commented out!
  ]

  deps = [
    ":icl",
  ]
}

test("string_utils_test") {
  sources = [
    "string_utils_unittest.cc",
  ]

  deps = [
    ":icl",
  ]
}

test("template_test") {
  sources = [
    "template_unittest.cc",
  ]

  deps = [
    ":icl",
    ":icl_test_support",
  ]
}

test("tokenizer_test") {
  sources = [
    "tokenizer_unittest.cc",
  ]

  deps = [
    ":icl",
  ]
}

test("value_test") {
  sources = [
    "value_unittest.cc",
  ]

  deps = [
    ":icl",
    ":icl_test_support",
  ]
}

# string_number_conversions ----------------------------------------------------

source_set("string_number_conversions") {
  sources = [
    "string_number_conversions.cc",
    "string_number_conversions.h",
  ]
}

test("string_number_conversions_test") {
  sources = [
    "string_number_conversions_unittest.cc",
  ]

  deps = [
    ":string_number_conversions",
  ]
}

# string_piece -----------------------------------------------------------------

source_set("string_piece") {
  sources = [
    "string_piece.cc",
    "string_piece.h",
  ]
}

test("string_piece_test") {
  sources = [
    "string_piece_unittest.cc",
  ]

  deps = [
    ":string_piece",
  ]
}

# ref_counted ------------------------------------------------------------------

source_set("ref_counted") {
  sources = [
    "ref_counted.h",
    "ref_counted_internal.h",
    "ref_ptr.h",
    "ref_ptr_internal.h",
  ]
}

test("ref_counted_test") {
  sources = [
    "ref_counted_unittest.cc",
  ]

  deps = [
    ":ref_counted",
  ]
}
